<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.escom.controlacceso.vista.InicioSesionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SmartStock"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#663300"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="HardcodedText"
        android:id="@+id/textView30"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="382dp"
        android:layout_height="207dp"
        app:srcCompat="@mipmap/caja1"
        tools:layout_editor_absoluteY="59dp"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="ContentDescription"
        android:layout_below="@+id/textView30"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:srcCompat="@mipmap/user"
        tools:layout_editor_absoluteY="283dp"
        tools:layout_editor_absoluteX="49dp"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/imageView"
        android:layout_toStartOf="@+id/textView30"
        android:layout_marginEnd="15dp" />

    <EditText
        android:id="@+id/txLogin"
        android:layout_width="249dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombre_empresa"
        android:textColor="#663300"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="283dp"
        tools:ignore="LabelFor"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignStart="@+id/textView30" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="46dp"
        android:layout_height="39dp"
        app:srcCompat="@mipmap/ic_https_black_24dp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="339dp"
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/txPassword"
        android:layout_alignStart="@+id/imageView2" />

    <EditText
        android:id="@+id/txPassword"
        android:layout_width="247dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/contrase_a"
        android:textColor="#663300"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="339dp"
        tools:ignore="LabelFor"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txLogin"
        android:layout_alignEnd="@+id/txLogin" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recu_rdame"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="388dp"
        android:layout_below="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />

    <TextView
        android:id="@+id/linkPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidaste_la_contrase_a"
        android:textColor="#663300"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="396dp"
        android:layout_alignBaseline="@+id/checkBox"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_alignEnd="@+id/txPassword" />

    <Button
        android:id="@+id/btnIniciarSesion"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="121dp"
        android:layout_height="37dp"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="#ffce99"
        android:onClick="none"
        android:text="@string/inicia_sesi_n"
        android:textColor="#663500"
        tools:ignore="TextViewEdits"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="428dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Aún no tienes cuenta?"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="478dp"
        tools:ignore="HardcodedText"
        android:layout_alignBaseline="@+id/linkNewCuenta"
        android:layout_alignBottom="@+id/linkNewCuenta"
        android:layout_toStartOf="@+id/linkNewCuenta" />

    <TextView
        android:id="@+id/linkNewCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Créala aquí"
        android:textColor="#663500"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="478dp"
        tools:ignore="HardcodedText"
        android:layout_marginBottom="13dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView30" />

</RelativeLayout>
